More work on base browser and build process:
- Add lint check and fail builds on lint errors and warnings.
- Fix all the lint errors and warnings.
- Style a little the Appbar, set proper url or DDG query when browsing.
- Disable the refresh button on startup when there's nothing to refresh
- Set configChanges in the main activity to prevent the WebView to reload on every rotation change (we'll see if there's a better way to preserve the state without using this)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">DuckDuckGo</string>
 
+    <!-- Appbar -->
+    <string name="appbar_search_edit_text_hint">Search DuckDuckGo</string>
+
     <!-- Browser Menu -->
     <string name="browser_menu_action_back">Back</string>
     <string name="browser_menu_action_forward">Forward</string>
