--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <!-- TabSwitcher -->
     <string name="tab_switcher_new_tab_button">+ New tab</string>
     <string name="tab_switcher_done_button">@string/done</string>
+    <string name="tab_switcher_remove_all_button">Remove All</string>
 </resources>
