More work on tabs:
- Edit BrowserPresenter tests to handle the TabView
- Make the activity singleInstance, so we don't have only one instance when launching the app from ACTION_ASSIST / ACTION_VIEW / ACTION_WEB_SEARCH
- inject the TabManager into the BrowserPresenter
Slightly edit the TabSwitcherActivity UI, to use a Toolbar and put the "new tab" button on the bottom with the other buttons, remove the openSettings action from the presenter.
- Add getter/setters for the TabManager fields.
- Remove the removeAllTabs from the BrowserView and let the tab manager remove all the tabs and inform the view after the callback.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,8 @@
     <string name="browser_menu_action_tab_switcher">Tab switcher</string>
 
     <!-- TabSwitcher -->
-    <string name="tab_switcher_new_tab_button">+ New tab</string>
+    <string name="tab_switcher_toolbar">Tabs</string>
+    <string name="tab_switcher_new_tab_button">New</string>
     <string name="tab_switcher_done_button">@string/done</string>
     <string name="tab_switcher_remove_all_button">Remove All</string>
     <string name="tab_switcher_tab_remove_content_description">Remove tab</string>
