Remove Lint warnings and error, and format code and clean imports, Save/Restore BookmarksActivity state.
- Suppress "Overdraw" warning in BookmarkViewHolder. the background is just of the view holder, not the screen.
- Add missing Content Description attributes.
- Add hint to the EditBookmarkDialogFragment name and url EditText.
- Add inputType to ur EditText in EditBookmarkDialogFragment.
- Save UI state in BookmarkActivity and restore it in the presenter after process is killed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,11 @@
     <string name="bookmark_dialog_cancel_button">@string/cancel</string>
     <string name="bookmark_dialog_title_edit">Edit bookmark</string>
     <string name="bookmark_dialog_title_save">Save bookmark</string>
+    <string name="bookmark_dialog_name_hint">Bookmark name</string>
+    <string name="bookmark_dialog_url_hint">Bookmark URL</string>
+
+    <!-- Content description -->
+    <string name="content_description_delete_button">Delete</string>
+    <string name="content_description_drag_item">Move item</string>
+
 </resources>
