--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,8 @@
     <string name="bookmark_dialog_url_hint">Bookmark URL</string>
 
     <!-- Tab Switcher -->
-    <string name="tab_switcher_toolbar">Private Tabs</string>
+    <string name="tab_switcher_title">Private Tabs</string>
+    <string name="tab_switcher_title_no_tabs">No Tabs</string>
     <string name="tab_switcher_fire_button">Clear All</string>
     <string name="tab_switcher_done_button">Done</string>
 
