--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">DuckDuckGo</string>
+    <string name="go">Go</string>
+    <string name="refresh">Refresh</string>
+    <string name="back">Back</string>
+    <string name="forward">Forward</string>
+    <string name="omnibarInputHint">Search or URL</string>
 </resources>
