--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="refresh">Refresh</string>
     <string name="back">Back</string>
     <string name="forward">Forward</string>
-    <string name="omnibarInputHint">Search or URL</string>
+    <string name="omnibarInputHint">Search or type URL</string>
     <string name="clearButtonContentDescription">Clear search input</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="duckDuckGoLogoDescription">DuckDuckGo logo</string>
 </resources>
