--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,6 @@
     <string name="appName">DuckDuckGo</string>
     <string name="duckDuckGoLogoDescription">DuckDuckGo logo</string>
 
-    <string name="go">Go</string>
     <string name="privacyDashboard">Privacy Dashboard</string>
     <string name="refresh">Refresh</string>
     <string name="back">Back</string>
@@ -17,5 +16,9 @@
     <string name="privacyGradeContentDescription">Privacy Grade</string>
     <string name="trackerNetworksContentDescription">Tracker networks icon</string>
     <string name="trackerNetworksBlocked">%s Tracker Networks Blocked</string>
+
+    <string name="httpsGood">Encrypted Connection</string>
+    <string name="httpsMixed">Mixed Encryption connection</string>
+    <string name="httpsBad">Unencrypted Connection</string>
 
 </resources>
