Adds privacy grade to the dashboard

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,15 +13,14 @@
     <string name="privacyDashboardActivityTitle">Privacy Dashboard</string>
     <string name="privacyProtectionEnabled">PRIVACY PROTECTION ENABLED</string>
     <string name="privacyProtectionDisabled">PRIVACY PROTECTION DISABLED</string>
+    <string name="privacyProtectionUpgraded">UPGRADED FROM &lt;img src="%d" /> TO &lt;img src="%d" /></string>
     <string name="privacyGradeContentDescription">Privacy Grade</string>
     <string name="trackerNetworksContentDescription">Tracker networks icon</string>
     <string name="networksBlocked">%s Tracker Networks Blocked</string>
     <string name="networksFound">%s Tracker Networks Found</string>
     <string name="majorNetworksBlocked">%s Major Tracker Networks Blocked</string>
     <string name="majorNetworksFound">%s Major Tracker Networks Found</string>
-    <string name="privacyProtectionToggleOn">Privacy Protection On</string>
-    <string name="privacyProtectionToggleOff">Privacy Protection Off</string>
-
+    <string name="privacyProtectionToggle">Privacy Protection</string>
 
     <string name="httpsGood">Encrypted Connection</string>
     <string name="httpsMixed">Mixed Encryption connection</string>
@@ -31,6 +30,5 @@
     <string name="termsMixed">Mixed Privacy Practices"</string>
     <string name="termsBad">"Poor Privacy Practices"</string>
     <string name="termsUnknown">Unknown Privacy Practices</string>
-
 
 </resources>
