--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,10 +16,27 @@
     <string name="privacyProtectionUpgraded">UPGRADED FROM &lt;img src="%d" /> TO &lt;img src="%d" /></string>
     <string name="privacyGradeContentDescription">Privacy Grade</string>
     <string name="trackerNetworksContentDescription">Tracker networks icon</string>
-    <string name="networksBlocked">%s Tracker Networks Blocked</string>
-    <string name="networksFound">%s Tracker Networks Found</string>
-    <string name="majorNetworksBlocked">%s Major Tracker Networks Blocked</string>
-    <string name="majorNetworksFound">%s Major Tracker Networks Found</string>
+
+    <plurals name="networksBlocked" >
+        <item quantity="one">%s Tracker Network Blocked</item>
+        <item quantity="other">%s Tracker Networks Blocked</item>
+    </plurals>
+
+    <plurals name="networksFound">
+        <item quantity="one">%s Tracker Network Found</item>
+        <item quantity="other">%s Tracker Networks Found</item>
+    </plurals>
+
+    <plurals name="majorNetworksBlocked">
+        <item quantity="one">%s Major Tracker Network Blocked</item>
+        <item quantity="other">%s Major Tracker Networks Blocked</item>
+    </plurals>
+
+    <plurals name="majorNetworksFound">
+        <item quantity="one">%s Major Tracker Network Found</item>
+        <item quantity="other">%s Major Tracker Networks Found</item>
+    </plurals>
+
     <string name="privacyProtectionToggle">Privacy Protection</string>
 
     <string name="httpsGood">Encrypted Connection</string>
