--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <string name="appName">DuckDuckGo</string>
     <string name="duckDuckGoLogoDescription">DuckDuckGo logo</string>
@@ -13,7 +13,7 @@
     <string name="privacyDashboardActivityTitle">Privacy Dashboard</string>
     <string name="privacyProtectionEnabled">PRIVACY PROTECTION ENABLED</string>
     <string name="privacyProtectionDisabled">PRIVACY PROTECTION DISABLED</string>
-    <string name="privacyProtectionUpgraded">UPGRADED FROM &lt;img src="%d" /> TO &lt;img src="%d" /></string>
+    <string name="privacyProtectionUpgraded" tools:ignore="TypographyQuotes">UPGRADED FROM &lt;img src="%d" /> TO &lt;img src="%d" /></string>
     <string name="privacyGradeContentDescription">Privacy Grade</string>
     <string name="trackerNetworksContentDescription">Tracker networks icon</string>
     <string name="networksBlocked">%s Tracker Networks Blocked</string>
@@ -32,5 +32,8 @@
     <string name="practicesBad">"Poor Privacy Practices"</string>
     <string name="practicesUnknown">Unknown Privacy Practices</string>
     <string name="practices_overview">Privacy practices indicate how much the personal information that you share with a website is protected.</string>
+    <string name="practices_tosdr_link">Privacy Practices results from&#160;<b><u>TOSDR</u></b></string>
+    <string name="practices_icon_content_good">Good Practice Icon</string>
+    <string name="practices_icon_content_bad">Bad Practice Icon</string>
 
 </resources>
