--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="title_activity_settings">Settings</string>
     <string name="settings_menu_item_title">Settings</string>
     <string name="settings_version">Version</string>
+    <string name="about_duckduckgo">About DuckDuckGo</string>
 
 
 </resources>
