--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,14 @@
     <string name="settings_version">Version</string>
     <string name="about_duckduckgo">About DuckDuckGo</string>
 
+    <!-- About Activity -->
+    <string name="title_activity_about_duck_duck_go">About us</string>
+    <string name="ddg_about">
+        Privacy, simplified.\n\n\
+        At DuckDuckGo, we\'re setting the new standard of trust online.\n\n\
+        DuckDuckGo Privacy Browser provides all the privacy essentials you need to protect yourself as you search and browse the web, including tracker blocking, smarter encryption, and DuckDuckGo private search.\n\n\
+        After all, the internet shouldn\'t feel so creepy, and getting the privacy you deserve online should be as simple closing the blinds.</string>
+    <string name="ddg_link"><a href="https://duckduckgo.com/about">More at duckduckgo.com/about</a></string>
+
 
 </resources>
