--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,7 +58,8 @@
         At DuckDuckGo, we\'re setting the new standard of trust online.\n\n\
         DuckDuckGo Privacy Browser provides all the privacy essentials you need to protect yourself as you search and browse the web, including tracker blocking, smarter encryption, and DuckDuckGo private search.\n\n\
         After all, the internet shouldn\'t feel so creepy, and getting the privacy you deserve online should be as simple closing the blinds.</string>
-    <string name="ddg_link"><a href="https://duckduckgo.com/about">More at duckduckgo.com/about</a></string>
+    <string name="ddg_link">More at <font color="#50BFFF">duckduckgo.com/about</font></string>
+    <string name="aboutDdgUrl">https://duckduckgo.com/about</string>
 
 
 </resources>
