--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,16 @@
     <string name="networksActivityTitle">Tracker Networks</string>
     <string name="networksOverview">Tracker networks aggregate your web history into a data profile about you. Major tracker networks are more harmful because they can track and target you across more of the internet.</string>
 
+    <plurals name="trackersFound">
+        <item quantity="one">%s Tracker Found</item>
+        <item quantity="other">%s Trackers Found</item>
+    </plurals>
+
+    <plurals name="trackerBlocked">
+        <item quantity="one">%s Tracker Blocked</item>
+        <item quantity="other">%s Trackers Blocked</item>
+    </plurals>
+
     <plurals name="networksBlocked">
         <item quantity="one">%s Tracker Network Blocked</item>
         <item quantity="other">%s Tracker Networks Blocked</item>
@@ -32,6 +42,19 @@
         <item quantity="one">%s Tracker Network Found</item>
         <item quantity="other">%s Tracker Networks Found</item>
     </plurals>
+
+    <plurals name="majorNetworksFound">
+        <item quantity="one">%s Major Tracker Network Found</item>
+        <item quantity="other">%s Major Tracker Networks Found</item>
+    </plurals>
+
+    <plurals name="majorNetworksBlocked">
+        <item quantity="one">%s Major Tracker Network Blocked</item>
+        <item quantity="other">%s Major Tracker Networks Blocked</item>
+    </plurals>
+
+    <string name="scorecardActivityTitle">Privacy Grade</string>
+    <string name="scorecardSiteIsMemberOfMajorNetwork">Site is Major Tracker Network</string>
 
     <string name="privacyTermsActivityTitle">Privacy Practices</string>
     <string name="practicesGood">Good Privacy Practices</string>
@@ -43,7 +66,6 @@
     <string name="practicesIconContentGood">Good Practice Icon</string>
     <string name="practicesIconContentBad">Bad Practice Icon</string>
     <string name="privacyProtectionToggle">Privacy Protection</string>
-
 
     <!-- Settings Activity -->
     <string name="settingsActivityTitle">Settings</string>
