--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,12 @@
     <string name="privacyDashboard">Privacy Dashboard</string>
 
     <!-- Onboarding Activity -->
+    <string name="onboardingProtectDataTitle">Protect Your Data</string>
+    <string name="onboardingProtectDataDescription">Tap the Privacy Grade to reveal who we caught trying to track you.\n</string>
+    <string name="onboardingNoTraceTitle">Leave No Trace</string>
+    <string name="onboardingNoTraceDescription1">Tap the Fire Button to erase your tabs and browsing history.</string>
+    <string name="onboardingNoTraceDescription2">Your data is toast!</string>
+
 
     <!-- Browser Activity -->
     <string name="refresh">Refresh</string>
