--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,7 +113,7 @@
     <string name="bookmarksActivityTitle">Bookmarks</string>
     <string name="addBookmarkMenuTitle">Add Bookmark</string>
     <string name="deleteBookmarkContentDescription">Delete bookmark for %s</string>
-    <string name="bookmarkDeleteConfirmMessage">Are you sure you want to delete this bookmark?</string>
+    <string name="bookmarkDeleteConfirmMessage">Are you sure you want to delete this bookmark?\n\n\'%s\'</string>
     <string name="bookmarkDeleteConfirmTitle">Confirm</string>
 
 </resources>
