feedback when adding bookmark and use anko toast

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,5 +115,6 @@
     <string name="deleteBookmarkContentDescription">Delete bookmark for %s</string>
     <string name="bookmarkDeleteConfirmMessage">Are you sure you want to delete this bookmark?\n\n\'%s\'</string>
     <string name="bookmarkDeleteConfirmTitle">Confirm</string>
+    <string name="bookmarkAddedFeedback">Bookmark added</string>
 
 </resources>
