Menu clean up and bookmarks ui tweaks
• Clean up menu after activity is gone
• Small bookmark ui tweaks, including positioning, icon image and making icon tappable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,7 +121,7 @@
     <string name="boomarksMenuTitle">Bookmarks</string>
     <string name="bookmarksActivityTitle">Bookmarks</string>
     <string name="deleteBookmarkContentDescription">Delete bookmark for %s</string>
-    <string name="bookmarkDeleteConfirmMessage">Are you sure you want to delete this bookmark?\n\n\'%s\'</string>
+    <string name="bookmarkDeleteConfirmMessage">Are you sure you want to delete bookmark &lt;b>%s&lt;/b>?</string>
     <string name="bookmarkDeleteConfirmTitle">Confirm</string>
     <string name="bookmarkAddedFeedback">Bookmark added</string>
 
